body overflowing when sidebar is open, fixed

--- a/src/Components/Sidebar/sidebar.scss
+++ b/src/Components/Sidebar/sidebar.scss
@@ -23,7 +23,7 @@
             justify-content: space-between;
             align-items: center;
             padding-left: 15px;
-            padding-right: 20px;
+            padding-right: 20px;    
 
             
         }
@@ -33,8 +33,12 @@
             font-weight: bold;
             color:#8884d8;
 
-            @media screen and (max-width: 768px){
+            @media screen and (max-width: 600px){
                 font-size: 14px;
+            }
+
+            @media screen and (max-width: 768px){
+                font-size: 18px;
             }
         }
 
